    ** the restarts for recovering from input and output encoding
       errors only appear when there is in fact such an error to
       handle.
  * increased the maximimum compact environment size to allow
    purify on images with large amounts of functions. (thanks to Cyrus Harmon)
  * improvements to the x86-64 disassembler. (thanks to Lutz Euler)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** MISC.549 and similar: late transformation of unsafe type
       assertions into derived types caused unexpected code
       transformations.
    ** SCALE-FLOAT type deriver is less wrong.
    ** type derivers for EXP, LOG and similar functions compute result
       types for complex arguments better.
    ** (MISC.563) CONJUGATE type deriver works for very restricted
       complex types.
    ** out-of-line type testers for character strings are available.
    ** EQUAL compiler transform understands specialness of objects
       of type BIT-VECTOR.
    ** accessing double-floats stored on the stack now works on x86-64.
    ** debugger internals could sometimes create invalid lispobjs, 
       resulting in GC crashes.

changes in sbcl-0.8.21 (0.9alpha.1?) relative to sbcl-0.8.20:
  * incompatible change: thread support for non-NPTL systems has
    been removed - locking is buggy and unreliable.  A threaded 
    SBCL build will now warn at startup and refuse to create
    new threads, unless futex support is detected in the kernel
  * incompatible change: the top level REPL now has only an ABORT
    restart associated with it, not TOPLEVEL and ABORT as it used to.
    TOP and TOPLEVEL are now available as debugger commands for 
    returning to the top level.
  * incompatible change: forms evaluated in the REPL now use the
    global optimization policy.
  * incompatible change: user- and system-initialization files are
    no longer processed with LOAD, but by READ and EVAL; hence the
    global optimization policy, startup package, readtable, etc, 